fixed extra space on the main-content div

--- a/src/_text-styles.scss
+++ b/src/_text-styles.scss
@@ -120,3 +120,13 @@
     text-align: center;
     color:#68768C;
 }
+.content-bar-title{
+font-family: HelveticaNeue-Medium;
+	font-size: 32px;
+	font-weight: 500;
+	font-style: normal;
+	font-stretch: normal;
+	text-align: left;
+	color: $primary;
+    margin-left: 50.5px;
+}
