--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -4,15 +4,15 @@
 }
 .main-content{
     width:100%;
-    height:100%;
+    height: 100%;
     display: flex;
     flex-direction: row;
-    // background-color: #00FFFF
+    padding-top: 50px;
 } 
+
 .place-window{
     width: 100%;
     height: 100%;
-    // background-color: blue;
     padding-right:30px;
     padding-left:30px;
 
