--- a/src/app/nav-bar/nav-bar.component.scss
+++ b/src/app/nav-bar/nav-bar.component.scss
@@ -18,6 +18,8 @@
     width: 100%;
     display: flex;
     align-items: center;
+    position: absolute;
+    top:0px;
     // border-radius: 0;
     // margin-bottom: 0;
 }
