--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,14 +1,18 @@
 /* You can add global styles to this file, and also import other style files */
 @import "color-palette";
 html {
-    min-width: 100%;
-    min-height: 100%;
+    // min-width: 100%;
+    // min-height: 100%;
     width: 100%;
     height: 100%;
+    overflow: hidden;
 }
 
 body {
-    height: inherit;
+    // height: inherit;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
     background-color: $background-color;
     background-image: url("/assets/clock.png");
     background-repeat: repeat;
